# udev-rs

./: .travis.yml  Cargo.toml  README.md
.github/workflows/: ci.yml
examples/: list_devices.rs  monitor.rs
src/: context.rs  device.rs  enumerator.rs  error.rs  hwdb.rs  lib.rs  list.rs  monitor.rs  udev.rs  util.rs
