[package]
name = "udev"
version = "0.4.0"
authors = ["David Cuddeback <david.cuddeback@gmail.com>", "Victor Brekenfeld <github@drakulix.de>"]
description = "libudev bindings for Rust"
license = "MIT"
homepage = "https://github.com/Smithay/udev-rs"
repository = "https://github.com/Smithay/udev-rs"
documentation = "http://docs.rs/udev/"
keywords = ["udev", "hardware", "bindings", "sysfs"]
readme = "README.md"

[dependencies]
libudev-sys = "0.1.4"
libc = "0.2"
mio = { version = "0.6", optional = true }
